  `http://llvm.org/')

* updated `Doxyfile' and moved in into the `doc' directory; the documentation
  can be created using `make doxygen' which creates the directory
  `doc/doxygen'

* made adaptions to the Makefile options to be able to create Mac Universal
  binaries for 64 bit architectures (XCode 3.0 with SDK `MacOSX10.5.sdk' is
  needed)

Version 1.12
============

* implemented methods to calculate a compact representation of the formulae
  annotated to the operating guideline's states according to the paper
  submitted to ACSD 2009; the new method can be triggered with the new mode
  `-m annotation'

* in mode `-m annotation', the `--dot' (`-d') parameter creates a version of
  the input operating guidelines in which the explicit formulae are replaced
  by different colors representing the bit representation

* File input options `--og' (`-o') and `--automaton' (`-a') are now optional
  for Gengetopt, but are checked in the `main.cc' file. This was necessary,
  because the `-m annotation' mode did not need to parse a service automaton.

* implemented a mode `-m bpmn' to create a rudimentary BPMN (Business Process
  Modeling Notation) output in Graphviz dot format of a service automaton
  (given by `--automaton'); the path of the used stencils can be changed with
  `--shapedir'

* when using the `--dot' (`-d') parameter, a PNG (Portable Network Graphics)
  file is now only created if the parameter `--png' is given

* overworked and beautified Graphviz dot output for operating guidelines:
  annotated formulae now use mathematical symbols for conjunctions and
  disjunctions, and the initial state is marked

Version 1.11
============

* implemented Fiona's modified OG file format (an OG file now also consists
  of an interface definition) and adjusted the respective test cases -- note
  that Rachel's parser is backwards compatible and still accepts OG files
  without interface definition
