@@ -4,6 +4,13 @@ command="rachel -a $testdir/testfiles/traveler.sa -o $testdir/testfiles/agency_a
 echo ""
 echo "test: simulation with Dot output"
 echo "      $command"
+
+if test "$DOT" = "not found"; then
+	# The exit 77 is the magic value which tells Automake's `make check'
+	# that this test was skipped.
+  exit 77
+fi
+
 $command &> /dev/null
 
 if [ $? -eq 0 ]
